Revision history for {{$dist->name}}

{{$NEXT}}
  - Add support for closures taking records pass-by-value (gh#312)

1.38      2021-03-08 17:13:15 -0700
  - Production release identical to 1.37_01

1.37_01   2021-03-06 14:03:35 -0700
  - Document the .fbx interface for specifying compiler / linker flags or
    using Aliens with bundled C code in FFI::Platypus::Bundle
    (gh#221, gh#306)

1.36_01   2021-03-02 17:32:03 -0700
  - Improved the reliability of ABI detection on some platforms
    (gh#285, gh#301, gh#302)

1.35_01   2021-03-01 16:02:07 -0700
  - Favor the Microsoft strdup over the bundled copy if found as _strdup
    which is what it is called now (gh#299).
  - Added FFI::Platypus::Type::WideString type plugin
    (IKEGAMI++ gh#291, gh#292, gh#299)

1.34      2020-10-23 09:04:46 -0600
  - Fixed bug in in record meta object which expressed itself on at least
    some platforms (gh#287, gh#288)

1.33      2020-09-28 10:47:26 -0600
  - FFI::Platypus::Declare is no longer part of this distribution.  It is
    now available from FFI-Platypus-Declare instead.  It has already
    been discouraged for quite some time. (gh#285)
  - Fix bug where bundled .so name could incorrectly get double colons (::)
    in the name in development mode only.  This is probably only a problem
    on Windows. (gh#284)

1.32      2020-09-21 04:25:13 -0600
  - Fix unsupported Perl tests.
    Fixes code that refuse to install on 5.10.0t (threads) (gh#275, gh#280)

1.31      2020-07-01 05:28:10 -0600
  - Refuse to install on very old versions of Perl 5.8.1, 5.8.2, 5.8.3 and
    5.10.0t (threads) (Gh#275)
  - Move to new GH org PerlFFI (old org was Perl5-FFI, and will remain to
    keep URL redirection).  The new URL is
    https://github.com/PerlFFI/FFI-Platypus

1.30      2020-06-16 06:51:53 -0600
  - Dropping support for Perl 5.8.1, 5.8.2 and 5.8.3, and the threaded version
    of 5.10.0.  For now Platypus will install on these versions of Perl, but a