@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Fix bug where closure ABI wasn't being used for non-default
+    ABIs (gh#313, gh#314)
   - Add support for closures taking records pass-by-value (gh#312)
 
 1.38      2021-03-08 17:13:15 -0700
